move: 기존 파일 위치 수정

--- a/practice2/table.html
+++ b/practice2/table.html
@@ -24,6 +24,8 @@
     </style>
   </head>
   <body>
+    <h1>semantic tag의 사용 이유</h1>
+    <h2>웅진씽크빅 사이트의 아쉬운 점</h2>
     <table>
       <tr>
         <th>보완점</th>
@@ -56,6 +58,14 @@
       <tr>
         <td>footer 부분을 굳이굳이 div로 해둔것같음</td>
         <td>웹사이트의 하단 정보가 명확하게 구분되어 있지 않음</td>
+      </tr>
+      <tr>
+        <td>meta태그의 부재</td>
+        <td>meta description의 부재로 인하여 검색엔진 노출면에서 아쉬움</td>
+      </tr>
+      <tr>
+        <td>button태그를 사용해서 페이지의 이동을 처리</td>
+        <td>a태그를 이용해서 페이지 내에서도 이동을 처리하면 더 의미에 맞게 됨</td>
       </tr>
     </table>
     <table>
