--- a/practice3/login_gwang.html
+++ b/practice3/login_gwang.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <h1>Login Form</h1>
-    <form>
+    <form action="login_gwang.html" method="post">
       <label for="username">Username:</label><br />
       <input type="text" id="username" name="username" required /><br />
       <label for="password">Password:</label><br />
