edit: 불필요한 문자 삭제

--- a/practice3/login_gwang.html
+++ b/practice3/login_gwang.html
@@ -16,7 +16,7 @@
       <input type="email" id="email" name="email" /><br />
       <input type="submit" value="Login" />
     </form>
-    <h2>여기어때 Travel Destination Search</h2>
+    <h2>여기어때</h2>
     <form action="https://www.goodchoice.kr/product/result" method="get">
       <label for="keyword">Search:</label><br />
       <input type="search" id="keyword" name="keyword" required />
