edit: 시멘틱 태그를 통한 수정

--- a/practice2/table.html
+++ b/practice2/table.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>웅진씽크빅 보완점</title>
+    <title>웅진씽크빅 보완점 과 시멘틱태그</title>
     <style>
       body {
         font-family: Arial, sans-serif;
@@ -24,67 +24,87 @@
     </style>
   </head>
   <body>
-    <h1>semantic tag의 사용 이유</h1>
-    <h2>웅진씽크빅 사이트의 아쉬운 점</h2>
-    <table>
-      <tr>
-        <th>보완점</th>
-        <th>설명</th>
-      </tr>
-      <tr>
-        <td>header 부분이 없음</td>
-        <td>웹사이트의 주요 내용을 소개하는 부분이 없음</td>
-      </tr>
-      <tr>
-        <td>nav를 통해 "지국찾기", "선생님 지원", "자료 다운로드" 등 링크들이 태그로 그룹화해야할듯</td>
-        <td>웹사이트의 주요 내비게이션 링크들이 그룹화되어 있지 않음</td>
-      </tr>
-      <tr>
-        <td>div를 주로 사용하여 main 부분이 명확하지 않음</td>
-        <td>웹사이트의 주요 내용을 담는 부분이 명확하게 구분되어 있지 않음</td>
-      </tr>
-      <tr>
-        <td>section을 통하여, "웅진 씽크빅 라운지" 같은 팝업 모달들을 정의하면 좋을것같음</td>
-        <td>웹사이트의 특정 섹션들이 명확하게 구분되어 있지 않음</td>
-      </tr>
-      <tr>
-        <td>article을 사용할 부분이 보이지않음</td>
-        <td>독립적으로 구분될 수 있는 콘텐츠가 명확하게 구분되어 있지 않음</td>
-      </tr>
-      <tr>
-        <td>"Family Site" 같은 경우는 메인과는 동떨어진 컨텐츠로 보이기때문에 aside가 적합해보임</td>
-        <td>웹사이트의 메인 콘텐츠와는 별개의 부가적인 정보가 명확하게 구분되어 있지 않음</td>
-      </tr>
-      <tr>
-        <td>footer 부분을 굳이굳이 div로 해둔것같음</td>
-        <td>웹사이트의 하단 정보가 명확하게 구분되어 있지 않음</td>
-      </tr>
-      <tr>
-        <td>meta태그의 부재</td>
-        <td>meta description의 부재로 인하여 검색엔진 노출면에서 아쉬움</td>
-      </tr>
-      <tr>
-        <td>button태그를 사용해서 페이지의 이동을 처리</td>
-        <td>a태그를 이용해서 페이지 내에서도 이동을 처리하면 더 의미에 맞게 됨</td>
-      </tr>
-    </table>
-    <table>
-      <tr>
-        <th>이유</th>
-        <th>설명</th>
-      </tr>
-      <tr>
-        <td>검색 엔진 최적화</td>
-        <td>시멘틱 태그는 검색 엔진이 웹 페이지의 콘텐츠를 더 잘 이해하도록 돕습니다. 이는 검색 결과의 순위에 영향을 미칠 수 있습니다.</td>
-      </tr>
-      <tr>
-        <td>접근성 향상</td>
-        <td>시멘틱 태그는 스크린 리더와 같은 보조 기술이 웹 페이지의 구조를 더 잘 이해하도록 돕습니다. 이는 웹 페이지의 접근성을 향상시킵니다.</td>
-      </tr>
-      <tr>
-        <td>코드의 가독성과 유지 보수</td>
-        <td>시멘틱 태그는 개발자가 HTML 코드를 더 쉽게 이해하고 유지 보수할 수 있도록 돕습니다. 이는 개발 과정을 효율화하고 오류를 줄일 수 있습니다.</td>
-      </tr>
-    </table>
+    <header>
+      <h1>웅진씽크빅 사이트의 아쉬운 점 과 semantic tag의 사용 이유</h1>
+    </header>
+    <main>
+      <section>
+        <table>
+          <thead>
+            <tr>
+              <th>보완점</th>
+              <th>설명</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>header 부분이 없음</td>
+              <td>웹사이트의 주요 내용을 소개하는 부분이 없음</td>
+            </tr>
+            <tr>
+              <td>nav를 통해 "지국찾기", "선생님 지원", "자료 다운로드" 등 링크들이 태그로 그룹화해야할듯</td>
+              <td>웹사이트의 주요 내비게이션 링크들이 그룹화되어 있지 않음</td>
+            </tr>
+            <tr>
+              <td>div를 주로 사용하여 main 부분이 명확하지 않음</td>
+              <td>웹사이트의 주요 내용을 담는 부분이 명확하게 구분되어 있지 않음</td>
+            </tr>
+            <tr>
+              <td>section을 통하여, "웅진 씽크빅 라운지" 같은 팝업 모달들을 정의하면 좋을것같음</td>
+              <td>웹사이트의 특정 섹션들이 명확하게 구분되어 있지 않음</td>
+            </tr>
+            <tr>
+              <td>article을 사용할 부분이 보이지않음</td>
+              <td>독립적으로 구분될 수 있는 콘텐츠가 명확하게 구분되어 있지 않음</td>
+            </tr>
+            <tr>
+              <td>"Family Site" 같은 경우는 메인과는 동떨어진 컨텐츠로 보이기때문에 aside가 적합해보임</td>
+              <td>웹사이트의 메인 콘텐츠와는 별개의 부가적인 정보가 명확하게 구분되어 있지 않음</td>
+            </tr>
+            <tr>
+              <td>footer 부분을 굳이굳이 div로 해둔것같음</td>
+              <td>웹사이트의 하단 정보가 명확하게 구분되어 있지 않음</td>
+            </tr>
+            <tr>
+              <td>meta태그의 부재</td>
+              <td>meta description의 부재로 인하여 검색엔진 노출면에서 아쉬움</td>
+            </tr>
+            <tr>
+              <td>button태그를 사용해서 페이지의 이동을 처리</td>
+              <td>a태그를 이용해서 페이지 내에서도 이동을 처리하면 더 의미에 맞게 됨</td>
+            </tr>
+          </tbody>
+        </table>
+        <table>
+          <thead>
+            <tr>
+              <th>이유</th>
+              <th>설명</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>검색 엔진 최적화</td>
+              <td>시멘틱 태그는 검색 엔진이 웹 페이지의 콘텐츠를 더 잘 이해하도록 돕습니다. 이는 검색 결과의 순위에 영향을 미칠 수 있습니다.</td>
+            </tr>
+            <tr>
+              <td>검색 엔진 최적화</td>
+              <td>시멘틱 태그는 검색 엔진이 웹 페이지의 콘텐츠를 더 잘 이해하도록 돕습니다. 이는 검색 결과의 순위에 영향을 미칠 수 있습니다.</td>
+            </tr>
+            <tr>
+              <td>접근성 향상</td>
+              <td>시멘틱 태그는 스크린 리더와 같은 보조 기술이 웹 페이지의 구조를 더 잘 이해하도록 돕습니다. 이는 웹 페이지의 접근성을 향상시킵니다.</td>
+            </tr>
+            <tr>
+              <td>코드의 가독성과 유지 보수</td>
+              <td>시멘틱 태그는 개발자가 HTML 코드를 더 쉽게 이해하고 유지 보수할 수 있도록 돕습니다. 이는 개발 과정을 효율화하고 오류를 줄일 수 있습니다.</td>
+            </tr>
+          </tbody>
+        </table>
+      </section>
+    </main>
+    <footer>
+      <p>7팀 공동 조사</p>
+    </footer>
   </body>
 </html>
