--- a/personal/이광렬/practice5.html
+++ b/personal/이광렬/practice5.html
@@ -25,23 +25,23 @@
   <body>
     <div class="iframe-card">
       <h2>이광렬 자기소개서</h2>
-      <iframe src="../practice1/gwangryeol.html" frameborder="0"></iframe>
+      <iframe src="./practice1.html" frameborder="0"></iframe>
     </div>
     <div class="iframe-card">
       <h2>시멘틱태그</h2>
-      <iframe src="../practice2/table.html" frameborder="0"></iframe>
+      <iframe src="../../team/practice2.html" frameborder="0"></iframe>
     </div>
     <div class="iframe-card">
       <h2>로그인</h2>
-      <iframe src="../practice3/login_gwang.html" frameborder="0"></iframe>
+      <iframe src="./practice3-1.html" frameborder="0"></iframe>
     </div>
     <div class="iframe-card">
       <h2>여기어때 쿼리스트링을 통한 검색</h2>
-      <iframe src="../practice3/goodchoice_gwang.html" frameborder="0"></iframe>
+      <iframe src="./practice3-2.html" frameborder="0"></iframe>
     </div>
     <div class="iframe-card">
       <h2>시간표 및 즐겨찾기</h2>
-      <iframe src="../practice4/time_table_gwang.html" frameborder="0"></iframe>
+      <iframe src="./practice4.html" frameborder="0"></iframe>
     </div>
   </body>
 </html>
