refactor: section 나누고 h2 태그 추가

--- a/team/practice2.html
+++ b/team/practice2.html
@@ -29,6 +29,7 @@
     </header>
     <main>
       <section>
+        <h2>웅진씽크빅 사이트의 아쉬운 점</h2>
         <table>
           <thead>
             <tr>
@@ -75,6 +76,9 @@
             </tr>
           </tbody>
         </table>
+      </section>
+      <section>
+        <h2>semantic tag의 사용 이유</h2>
         <table>
           <thead>
             <tr>
