fix: 파일명과 위치에 따른 코드 수정

--- a/personal/곽성재/practice5.html
+++ b/personal/곽성재/practice5.html
@@ -24,24 +24,16 @@
       frameborder="1"
     ></iframe>
     <iframe
-      src="./table.html"
+      src="../../team/practice2.html"
       title="시멘틱고려의중요성"
       frameborder="1"
     ></iframe>
+    <iframe src="./practice3-1.html" title="로그인폼" frameborder="1"></iframe>
     <iframe
-      src="./loginform_sungjae.html"
-      title="로그인폼"
-      frameborder="1"
-    ></iframe>
-    <iframe
-      src="./search_sungjae.html"
+      src="./practice3-2.html"
       title="검색페이지"
       frameborder="1"
     ></iframe>
-    <iframe
-      src="./routine_sungjae.html"
-      title="하루일과"
-      frameborder="1"
-    ></iframe>
+    <iframe src="./practice4.html" title="하루일과" frameborder="1"></iframe>
   </body>
 </html>
