edit: 자기소개서 실습 수정

--- a/personal/이광렬/CSS실습/practice2.html
+++ b/personal/이광렬/CSS실습/practice2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>나에 대한 정보</title>
+    <title>이광렬 자기소개서</title>
     <!--Bootstrap 4.6.0-->
     <link
       rel="stylesheet"
@@ -16,7 +16,7 @@
     <style>
   body {
     font-family: Arial, sans-serif;
-    background-color: #e7e1ff;
+    background-color: #f4f1ff;
   }
   
   header img {
@@ -24,7 +24,7 @@
     border-radius: 10px;
   }
   header {
-  background-color: #8466ff;
+  background-color: #dad1ff;
   padding: 20px 0;
   text-align: center;
 }
@@ -35,7 +35,7 @@ header h1 {
 }
 
 nav {
-  background-color: #c3b4ff;
+  background-color: #e5dfff;
   padding: 15px 0;
 }
 
@@ -52,7 +52,7 @@ nav ul li {
 }
 
 nav ul li a {
-  color: #f8f9fa;
+  color: #ffffff;
   text-decoration: none;
   font-size: 1.2em;
 }
@@ -133,7 +133,7 @@ nav ul li a:hover {
   </head>
   <body>
     <header>
-      <h1>나에 대한 정보</h1>
+      <h1>이광렬</h1>
             <img src="https://github.com/yedol1/FM_Search/assets/57481378/8d892bb3-61ff-4125-8d27-5a3449c91a7b" alt="이광렬 사진" style="height: 200px; width: 200px" />
     </header>
     <nav>
