--- a/personal/이광렬/CSS실습/practice4.html
+++ b/personal/이광렬/CSS실습/practice4.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Flutter Mobile Application Development Bootcamp</title>
+    <title>교육과정 카드 컴포넌트</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
 
@@ -14,7 +14,14 @@
         overflow: hidden;
         border-radius: 1rem;
         box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.2);
+        transition: transform 0.3s ease;
       }
+
+      .card:hover {
+        transform: scale(1.05);
+        transition: transform 0.3s ease-in-out;
+      }
+
       .card-img-wrapper {
         position: relative;
       }
