style: 스타일 수정

--- a/personal/이광렬/CSS실습/practice2.html
+++ b/personal/이광렬/CSS실습/practice2.html
@@ -14,80 +14,79 @@
     />
     <link rel="stylesheet" href="./reset.css" />
     <style>
-  body {
-    font-family: Arial, sans-serif;
-    background-color: #f4f1ff;
-  }
-  
-  header img {
-    margin-top: 20px;
-    border-radius: 10px;
-  }
-  header {
-  background-color: #dad1ff;
-  padding: 20px 0;
-  text-align: center;
-}
+      body {
+        font-family: Arial, sans-serif;
+        background-color: #f4f1ff;
+      }
 
-header h1 {
-  font-size: 2.5em;
-  color: #ebf5ff;
-}
+      header img {
+        margin-top: 20px;
+        border-radius: 10px;
+      }
+      header {
+        background-color: #dad1ff;
+        padding: 20px 0;
+        text-align: center;
+      }
 
-nav {
-  background-color: #e5dfff;
-  padding: 15px 0;
-}
+      header h1 {
+        font-size: 2.5em;
+        color: #ebf5ff;
+      }
 
-nav ul {
-  display: flex;
-  justify-content: center;
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
-}
+      nav {
+        background-color: #e5dfff;
+        padding: 15px 0;
+      }
 
-nav ul li {
-  margin: 0 15px;
-}
+      nav ul {
+        display: flex;
+        justify-content: center;
+        list-style-type: none;
+        padding: 0;
+        margin: 0;
+      }
 
-nav ul li a {
-  color: #ffffff;
-  text-decoration: none;
-  font-size: 1.2em;
-}
+      nav ul li {
+        margin: 0 15px;
+      }
 
-nav ul li a:hover {
-  color: #007bff;
-  text-decoration: underline;
-}
+      nav ul li a {
+        color: #ffffff;
+        text-decoration: none;
+        font-size: 1.2em;
+      }
 
+      nav ul li a:hover {
+        color: #007bff;
+        text-decoration: underline;
+      }
 
-  main {
-    padding: 20px;
-  }
+      main {
+        padding: 20px;
+      }
 
-  section {
-    margin-bottom: 20px;
-  }
+      section {
+        margin-bottom: 20px;
+      }
 
-  section h2 {
-    border-bottom: 1px solid #dee2e6;
-    padding-bottom: 10px;
-  }
+      section h2 {
+        border-bottom: 1px solid #dee2e6;
+        padding-bottom: 10px;
+      }
 
-  footer {
-    text-align: center;
-    padding: 20px;
-    background-color: #f8f9fa;
-    border-top: 1px solid #dee2e6;
-  }
-  .main-container {
+      footer {
+        text-align: center;
+        padding: 20px;
+        background-color: #f8f9fa;
+        border-top: 1px solid #dee2e6;
+      }
+      .main-container {
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
-  }
-  .card-section {
+      }
+      .card-section {
         flex-basis: calc(50% - 20px);
         border: 1px solid #f0f0f0;
         border-radius: 10px;
@@ -95,46 +94,45 @@ nav ul li a:hover {
         margin-bottom: 20px;
         padding: 20px;
         box-sizing: border-box;
-  }
-  .card-section h2 {
-  color: #63008e;
-  font-size: 24px;
-  font-weight: 700;
-  margin-bottom: 15px;
-}
-.card-section dl {
-  display: grid;
-  grid-template-columns: max-content auto;
-  gap: 10px 20px;
-  margin: 0;
-}
+      }
+      .card-section h2 {
+        color: #63008e;
+        font-size: 24px;
+        font-weight: 700;
+        margin-bottom: 15px;
+      }
+      .card-section dl {
+        display: grid;
+        grid-template-columns: max-content auto;
+        gap: 10px 20px;
+        margin: 0;
+      }
 
-.card-section dt {
-  font-weight: 600;
-}
+      .card-section dt {
+        font-weight: 600;
+      }
 
-.card-section dd {
-  margin: 0;
-}
-.card-section dt {
-  font-weight: 600;
-}
+      .card-section dd {
+        margin: 0;
+      }
+      .card-section dt {
+        font-weight: 600;
+      }
+      .card-section ul li {
+        margin-bottom: 10px;
+      }
 
-
-
-@media (max-width: 768px) {
-  .card-section {
-    flex-basis: 100%;
-  }
-}
-</style>
-
+      @media (max-width: 768px) {
+        .card-section {
+          flex-basis: 100%;
+        }
+      }
     </style>
   </head>
   <body>
     <header>
       <h1>이광렬</h1>
-            <img src="https://github.com/yedol1/FM_Search/assets/57481378/8d892bb3-61ff-4125-8d27-5a3449c91a7b" alt="이광렬 사진" style="height: 200px; width: 200px" />
+      <img src="https://github.com/yedol1/FM_Search/assets/57481378/8d892bb3-61ff-4125-8d27-5a3449c91a7b" alt="이광렬 사진" style="height: 200px; width: 200px" />
     </header>
     <nav>
       <ul>
@@ -146,7 +144,7 @@ nav ul li a:hover {
     </nav>
     <main class="main-container">
       <section id="personal-info" class="card-section col-lg-6 col-md-6 col-sm-6">
-        <h2>개인 정보</h2>
+        <h2>🌸 개인 정보 🌸</h2>
         <dl>
           <dt>이름</dt>
           <dd>이광렬</dd>
@@ -154,28 +152,30 @@ nav ul li a:hover {
           <dd>26</dd>
           <dt>MBTI</dt>
           <dd>ENFP</dd>
+          <dt>블로그</dt>
+          <dd><a href="https://velog.io/@yedol1">Velog</a></dd>
         </dl>
       </section>
       <section id="hobby" class="card-section col-lg-6 col-md-6 col-sm-6">
-        <h2>취미</h2>
+        <h2>🏃 취미 🏃</h2>
         <ul>
-          <li>야구 & 축구</li>
-          <li>커피챗</li>
-          <li>공연관람</li>
-          <li>전시회관람</li>
+          <li>1️⃣ 야구 & 축구</li>
+          <li>2️⃣ 커피챗</li>
+          <li>3️⃣ 공연관람</li>
+          <li>4️⃣ 전시회관람</li>
         </ul>
       </section>
       <section id="specialty" class="card-section col-lg-6 col-md-6 col-sm-6">
-        <h2>특기</h2>
+        <h2>👑 특기 👑</h2>
         <ul>
-          <li>일단 배우고자 싶은것이 있다면 바로 시도해보는것에 익숙합니다.</li>
-          <li>React 프레임 워크에 익숙합니다.</li>
-          <li>스포츠활동과 같은 활동적인 활동을 좋아합니다.</li>
-          <li>의사소통을 통해 문제해결을 지향합니다.</li>
+          <li>1️⃣ 일단 배우고자 싶은것이 있다면 바로 시도해보는것에 익숙합니다.</li>
+          <li>2️⃣ React 프레임 워크에 익숙합니다.</li>
+          <li>3️⃣ 스포츠활동과 같은 활동적인 활동을 좋아합니다.</li>
+          <li>4️⃣ 의사소통을 통해 문제해결을 지향합니다.</li>
         </ul>
       </section>
       <section id="company" class="card-section col-lg-6 col-md-6 col-sm-6">
-        <h2>취업하고자 하는 회사</h2>
+        <h2>💼 취업하고자 하는 회사 💼</h2>
         <p>web 3 를 다루는 회사도 관심있고, 플랫폼을 메인으로 다루는 회사에 관심이 있습니다. 특히, 제가 성장하는것에 있어 도움이 되는 회사를 원합니다.</p>
       </section>
     </main>
