Rename: html-class파일으로 이동

--- a/personal/안태경/html-class/practice1.html
+++ b/personal/안태경/html-class/practice1.html
@@ -5,10 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>안태경 - 나무위키</title>
   </head>
+  <link rel="stylesheet" href="practice1.css" />
 
   <body>
+    <header>
+      <div class="logo"></div>
+      <nav>
+        <ul>
+          <li>최근 변경</li>
+          <li>최근 토론</li>
+          <li>특수 기능</li>
+        </ul>
+      </nav>
+      <div id="search"></div>
+    </header>
+
     <h1>안태경</h1>
-    <table border="black" style="border-collapse: collapse" width="300">
+    <table class="table_main">
       <tr>
         <td>Front-end Developer</td>
       </tr>
@@ -17,48 +30,50 @@
       </tr>
     </table>
 
-    <table border="black" style="border-collapse: collapse" width="300">
+    <table>
       <tr>
-        <td>본명</td>
+        <td class="table_title">본명</td>
         <td>안태경</td>
       </tr>
       <tr>
-        <td>출생</td>
+        <td class="table_title">출생</td>
         <td>199x년 x월 2x일 (??세)</td>
       </tr>
       <tr>
-        <td>국적</td>
+        <td class="table_title">국적</td>
         <td>대한민국</td>
       </tr>
       <tr>
-        <td>학력</td>
+        <td class="table_title">학력</td>
         <td>대학교 졸업</td>
       </tr>
       <tr>
-        <td>MBTI</td>
+        <td class="table_title">MBTI</td>
         <td>ESFP</td>
       </tr>
       <tr>
-        <td>별명</td>
+        <td class="table_title">별명</td>
         <td>안경태</td>
       </tr>
       <tr>
-        <td>Github</td>
+        <td class="table_title">Github</td>
         <td><a href="https://github.com/FDTK">github.com/FDTK</a></td>
       </tr>
     </table>
 
-    <h2>1. 개요</h2>
-    <hr />
-    <img src="images/안태경프로필.jpg" style="width: 500px" />
-    <p>사진 찍기를 좋아하는 프론트엔드 개발자 지망생</p>
+    <section id="outline">
+      <h2>1. 개요</h2>
+      <hr />
+      <img src="images/안태경프로필.jpg" alt="안태경뒷모습사진" />
+      <p>사진 찍기를 좋아하는 프론트엔드 개발자 지망생</p>
 
-    <h2>2. (개발자) 공부 전</h2>
-    <hr />
-    고등학교를 졸업한 후 모대학의 생명시스템학과에 진학했으나 편입으로
-    화공생명공학과로 전과하였다. 졸업 후 제약회사에서 연구원으로 1년간
-    재직하였지만 그 뒤 웹디자인을 배우면서 웹개발에 흥미가 생겨 본격적으로 개발
-    공부를 시작한다.<a href="#">[1]</a>
+      <h2>2. (개발자) 공부 전</h2>
+      <hr />
+      고등학교를 졸업한 후 모대학의 생명시스템학과에 진학했으나 편입으로
+      화공생명공학과로 전과하였다. 졸업 후 제약회사에서 연구원으로 1년간
+      재직하였지만 그 뒤 웹디자인을 배우면서 웹개발에 흥미가 생겨 본격적으로
+      개발 공부를 시작한다.<a href="#">[1]</a>
+    </section>
 
     <h2>3. 개발 활동</h2>
     <hr />
