--- a/personal/안태경/safehomes/safehomes.html
+++ b/personal/안태경/safehomes/safehomes.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>세이프홈즈</title>
+    <link rel="stylesheet" href="safehomes.css" />
   </head>
   <body>
     <header>
@@ -17,7 +18,7 @@
       <section>
         내 집 보증금, 경매로 날아가면 어떻게 하지?
         <button>지금 걱정 해결하기 ></button>
-        <img src="#" alt="main_banner" />
+        <img src="images/Group 32.png" alt="main_banner" />
       </section>
       <!-- 아래부터 홍보 -->
       <section>
