feat: 곽성재 - 흐르는 애니메이션 구현

--- a/personal/곽성재/index.html
+++ b/personal/곽성재/index.html
@@ -360,6 +360,66 @@
             />
             <div class="name-wrap">
               <div class="txt-lg black">홍길동님</div>
+              <div class="txt-lg light-black">전/월세 보증금 지킴이 리포트</div>
+            </div>
+          </div>
+          <p class="description txt-lg light-black">
+            공인중개사가 계약을 너무 서두르는 느낌이 들어 불안했는데,
+            세이프홈즈를 통해서 리포트를 받아보니 아니나 다를까 위험요소가 너무
+            큰 매물이었습니다. 근저당이 너무 높게 잡혀있었고, 보증보험 적합
+            대상도 아니라 경매로 넘어가게 되면 보증금을 돌려받기 힘들 것 같아
+            해당 매물 계약을 포기하고, 더 안전한 매물을 찾아서 계약할 수
+            있었습니다.
+          </p>
+        </li>
+        <li class="card-bg">
+          <div class="flex">
+            <img
+              src="./assets/characters/조세호2.jpeg"
+              alt="프로필사진예시"
+            />
+            <div class="name-wrap">
+              <div class="txt-lg black">홍길동님</div>
+              <div class="txt-lg light-black">전/월세 보증금 지킴이 리포트</div>
+            </div>
+          </div>
+          <p class="description txt-lg light-black">
+            공인중개사가 계약을 너무 서두르는 느낌이 들어 불안했는데,
+            세이프홈즈를 통해서 리포트를 받아보니 아니나 다를까 위험요소가 너무
+            큰 매물이었습니다. 근저당이 너무 높게 잡혀있었고, 보증보험 적합
+            대상도 아니라 경매로 넘어가게 되면 보증금을 돌려받기 힘들 것 같아
+            해당 매물 계약을 포기하고, 더 안전한 매물을 찾아서 계약할 수
+            있었습니다.
+          </p>
+        </li>
+        <li class="card-bg">
+          <div class="flex">
+            <img
+              src="./assets/characters/조세호2.jpeg"
+              alt="프로필사진예시"
+            />
+            <div class="name-wrap">
+              <div class="txt-lg black">홍길동님</div>
+              <div class="txt-lg light-black">전/월세 보증금 지킴이 리포트</div>
+            </div>
+          </div>
+          <p class="description txt-lg light-black">
+            공인중개사가 계약을 너무 서두르는 느낌이 들어 불안했는데,
+            세이프홈즈를 통해서 리포트를 받아보니 아니나 다를까 위험요소가 너무
+            큰 매물이었습니다. 근저당이 너무 높게 잡혀있었고, 보증보험 적합
+            대상도 아니라 경매로 넘어가게 되면 보증금을 돌려받기 힘들 것 같아
+            해당 매물 계약을 포기하고, 더 안전한 매물을 찾아서 계약할 수
+            있었습니다.
+          </p>
+        </li>
+        <li class="card-bg">
+          <div class="flex">
+            <img
+              src="./assets/characters/조세호2.jpeg"
+              alt="프로필사진예시"
+            />
+            <div class="name-wrap">
+              <div class="txt-lg black">홍길동님</div>
               <div class="txt-lg light-black">등기부 등본 변동 알림 서비스</div>
             </div>
           </div>
