Style: 세이프홈즈 480~1920 반응형 페이지 구현

--- a/personal/안태경/safehomes/safehomes.html
+++ b/personal/안태경/safehomes/safehomes.html
@@ -114,8 +114,8 @@
         <!-- 계약 규칙 -->
         <section>
           <h3>
-            <span class="safehomes_middle">세이프홈즈,</span> 어떻게 내 보증금을
-            지킬 수 있을까요?
+            <span class="safehomes_middle" id="remove">세이프홈즈,</span> 어떻게
+            내 보증금을 지킬 수 있을까요?
           </h3>
           <div class="rule__boxes">
             <div class="rule__box">
@@ -161,6 +161,7 @@
           </div>
           <button class="button__shortcut">조금 더 알아보기 ></button>
         </section>
+
         <!-- 아래부터 핸드폰 목업 -->
         <div class="phone__mockups">
           <section class="phone__mockup">
@@ -170,11 +171,12 @@
             <div class="phone__textbox">
               <div class="phone__menu">리포트</div>
               <h3 class="phone__title">
-                등기부 등본 등을 분석한<br />보증금 지킴이 리포트
+                <span>등기부 등본 등을 분석한</span
+                ><span>보증금 지킴이 리포트</span>
               </h3>
               <p class="phone__content">
-                어려운 부동산 법률 용어가 아닌, 누구나 쉽게 이해할 수 있는
-                보증금 지킴이 리포트 제공
+                <span>어려운 부동산 법률 용어가 아닌, 누구나 쉽게</span
+                ><span>이해할 수 있는 보증금 지킴이 리포트 제공</span>
               </p>
             </div>
           </section>
@@ -184,10 +186,12 @@
             </div>
             <div class="phone__textbox">
               <div class="phone__menu">절차</div>
-              <h3 class="phone__title">보증금 보호를 위한,<br />체크리스트</h3>
+              <h3 class="phone__title">
+                <span>보증금 보호를 위한,</span>체크리스트<span></span>
+              </h3>
               <p class="phone__content">
-                전세 사기 당하지 않기 위해 반드시 확인해야 할 체크리스트를
-                제공합니다.
+                <span>전세 사기 당하지 않기 위해 반드시 확인해야 할 </span
+                ><span>체크리스트를 제공합니다.</span>
               </p>
             </div>
           </section>
@@ -198,11 +202,11 @@
             <div class="phone__textbox">
               <div class="phone__menu">알림</div>
               <h3 class="phone__title">
-                등기부 등본 변동에 따른<br />실시간 알리미
+                <span>등기부 등본 변동에 따른</span><span>실시간 알리미</span>
               </h3>
               <p class="phone__content">
-                어떤 말도 듣지 못 했는데 집 주인이 바뀌었다고? 세이프홈즈가 즉각
-                알려드립니다.
+                <span>어떤 말도 듣지 못 했는데 집 주인이 바뀌었다고?</span
+                ><span>세이프홈즈가 즉각 알려드립니다.</span>
               </p>
               <div class="phone__text_img">
                 <img src="./images/Compact (1).png" alt="문자이미지" />
