--- a/personal/이광렬/JS실습/clock.html
+++ b/personal/이광렬/JS실습/clock.html
@@ -2,23 +2,83 @@
 <html>
   <head>
     <title>실시간 시계 구현</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/css/bootstrap.min.css" rel="stylesheet" />
     <style>
       body {
         display: flex;
+        flex-direction: column;
         justify-content: center;
         align-items: center;
         height: 100vh;
         margin: 0;
         background-color: #f0f0f0;
-        font-size: 2em;
+      }
+
+      #clock {
+        font-size: 3em;
         font-family: Arial, sans-serif;
+        color: #fff;
+      }
+
+      .card {
+        width: 300px;
+        border: none;
+        border-radius: 15px;
+        background-color: #e0e0e0;
+        box-shadow: 0px 10px 25px -5px rgba(0, 0, 0, 0.3);
+      }
+
+      .card-header {
+        background-color: #d0d0d0;
+        border-bottom: none;
+      }
+
+      .card-body {
+        display: none;
+        justify-content: center;
+        align-items: center;
+        height: 150px;
+        padding: 0;
+      }
+
+      .clock-container {
+        border: solid 2px #d0d0d0;
+        border-radius: 15px;
+        background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("./images/bg1.jpg") center/cover no-repeat;
+        width: 80%;
+        height: 80%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
+      }
+
+      .background {
+        background-color: aquamarine;
       }
     </style>
   </head>
-  <body>
-    <div id="clock"></div>
+  <body class="background" onclick="changeBackground()">
+    <h1 class="header"></h1>
+    <div class="card">
+      <div class="card-body">
+        <div class="clock-container" onclick="changeBackgroundImage()">
+          <div id="clock"></div>
+        </div>
+      </div>
+    </div>
 
     <script>
+      function askNameAndRenderPage() {
+        const name = prompt("이름을 입력해주세요:");
+        if (name) {
+          document.querySelector(".header").innerText = `${name}님! 환영합니다!`;
+          document.querySelector(".card-body").style.display = "flex";
+        }
+      }
+
+      window.onload = askNameAndRenderPage;
+
       function updateClock() {
         const now = new Date();
         const hours = now.getHours().toString().padStart(2, "00");
@@ -29,6 +89,18 @@
 
       setInterval(updateClock, 1000);
       updateClock();
+
+      function changeBackground() {
+        const randomColor = Math.floor(Math.random() * 16777215).toString(16);
+        document.body.style.backgroundColor = "#" + randomColor;
+      }
+
+      function changeBackgroundImage() {
+        event.stopPropagation();
+        const randomNumber = Math.floor(Math.random() * 6) + 1;
+        const imageUrl = `linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("./images/bg${randomNumber}.jpg") center/cover no-repeat`;
+        document.querySelector(".clock-container").style.background = imageUrl;
+      }
     </script>
   </body>
 </html>
