add: 곽성재 - momentum app

--- a/personal/곽성재/js-assignment-html.html
+++ b/personal/곽성재/js-assignment-html.html
@@ -17,7 +17,7 @@
       <!-- greeting -->
       <section id="greeting" class="hide">
         <form class="login-box">
-          <div class="user-box">
+          <div class="input-box">
             <input type="text" id="userName" />
             <label for="userName">이름을 입력해주세요</label>
           </div>
@@ -25,9 +25,13 @@
       </section>
       <!-- todo -->
       <section id="todo">
-        <form>
-          <!-- <input type="text" name="" id="" /> -->
+        <form class="todo-box">
+          <div class="input-box">
+            <input type="text" id="todoInp" />
+            <label for="todoInp">할 일을 입력해주세요</label>
+          </div>
         </form>
+        <ul id="todoList"></ul>
       </section>
     </div>
   </body>
