--- a/personal/이광렬/JS실습/clock.html
+++ b/personal/이광렬/JS실습/clock.html
@@ -11,7 +11,16 @@
         align-items: center;
         height: 100vh;
         margin: 0;
-        background-color: #f0f0f0;
+        background-color: #83e0ff;
+      }
+
+      li {
+        list-style: none;
+      }
+
+      li span {
+        margin-right: 4px;
+        margin-left: 4px;
       }
 
       #clock {
@@ -24,8 +33,9 @@
         width: 300px;
         border: none;
         border-radius: 15px;
-        background-color: #e0e0e0;
+        background-color: rgb(224, 224, 224, 0.5);
         box-shadow: 0px 10px 25px -5px rgba(0, 0, 0, 0.3);
+        margin-bottom: 20px;
       }
 
       .card-header {
@@ -52,28 +62,96 @@
         align-items: center;
         cursor: pointer;
       }
+      #todo {
+        display: none;
+        flex-direction: column;
+      }
+      #todo-list {
+        padding: 0;
+      }
 
-      .background {
-        background-color: aquamarine;
+      #todo-list li {
+        font-size: 24px;
+        padding: 10px;
+        border-bottom: 1px solid #ddd;
+      }
+
+      #todo-list li:last-child {
+        border-bottom: none;
+      }
+      #todo-submit {
+        background: none;
+        font-size: 24px;
+        color: #000000;
+        border: none;
+        cursor: pointer;
+      }
+      #todo-input {
+        font-size: 24px;
+        border-top: none;
+        border-right: none;
+        border-left: none;
+        background-color: transparent;
+      }
+      #todo-input:focus {
+        outline: nonezxc;
+      }
+      .deleteButton {
+        float: right;
+        background: none;
+        color: #f00;
+        border: none;
+        cursor: pointer;
+        font-size: 24px;
+      }
+
+      #weather {
+        display: none;
+        box-sizing: border-box;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 20px;
+        border-radius: 15px;
+        width: 300px;
+        border: none;
+        background-color: rgb(224, 224, 224, 0.5);
+        box-shadow: 0px 10px 25px -5px rgba(0, 0, 0, 0.3);
+        padding: 20px;
+      }
+      #weather img {
+        width: 100px;
+      }
+      #weather p {
+        font-size: 32px;
+        margin: 0;
       }
     </style>
   </head>
   <body class="background" onclick="changeBackground()">
     <h1 class="header"></h1>
-    <div class="card">
+    <section id="todo">
+      <form id="todo-form">
+        <input id="todo-input" type="text" placeholder="목록을 추가해 주세요." />
+        <input id="todo-submit" type="submit" value="추가" />
+      </form>
+      <ul id="todo-list"></ul>
+    </section>
+    <section class="card">
       <div class="card-body">
         <div class="clock-container" onclick="changeBackgroundImage()">
           <div id="clock"></div>
         </div>
       </div>
-    </div>
-
+    </section>
+    <section id="weather"></section>
     <script>
       function askNameAndRenderPage() {
         const name = prompt("이름을 입력해주세요:");
         if (name) {
-          document.querySelector(".header").innerText = `${name}님! 환영합니다!`;
+          document.querySelector(".header").innerText = `${name}님의 TODO-LIST`;
           document.querySelector(".card-body").style.display = "flex";
+          document.getElementById("todo").style.display = "flex";
+          document.getElementById("weather").style.display = "flex";
         }
       }
 
@@ -91,8 +169,10 @@
       updateClock();
 
       function changeBackground() {
-        const randomColor = Math.floor(Math.random() * 16777215).toString(16);
-        document.body.style.backgroundColor = "#" + randomColor;
+        if (event.target === document.body) {
+          const randomColor = Math.floor(Math.random() * 16777215).toString(16);
+          document.body.style.backgroundColor = "#" + randomColor;
+        }
       }
 
       function changeBackgroundImage() {
@@ -101,6 +181,118 @@
         const imageUrl = `linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("./images/bg${randomNumber}.jpg") center/cover no-repeat`;
         document.querySelector(".clock-container").style.background = imageUrl;
       }
+
+      // Todo List를 관리하기 위한 객체 생성
+      const todoList = {
+        todos: [],
+        addTodo: function (todoText) {
+          this.todos.push({
+            todoText: todoText,
+            completed: false,
+          });
+        },
+        deleteTodo: function (position) {
+          this.todos.splice(position, 1);
+        },
+        toggleCompleted: function (position) {
+          var todo = this.todos[position];
+          todo.completed = !todo.completed;
+        },
+      };
+
+      // Todo 추가 이벤트
+      document.querySelector("#todo-form").addEventListener("submit", function (event) {
+        event.preventDefault();
+        const todoText = document.querySelector("#todo-input").value;
+        todoList.addTodo(todoText);
+        document.querySelector("#todo-input").value = "";
+        displayTodos();
+      });
+
+      function createDeleteButton() {
+        const deleteButton = document.createElement("button");
+        deleteButton.textContent = "삭제";
+        deleteButton.className = "deleteButton";
+        deleteButton.addEventListener("click", deleteTodo);
+        return deleteButton;
+      }
+
+      function deleteTodo(event) {
+        const elementClicked = event.target;
+        if (elementClicked.className === "deleteButton") {
+          todoList.deleteTodo(parseInt(elementClicked.parentElement.id));
+          displayTodos();
+        }
+      }
+
+      function displayTodos() {
+        const todoUl = document.querySelector("#todo-list");
+        todoUl.innerHTML = ""; // Resetting the list
+        todoList.todos.forEach(function (todo, index) {
+          const todoLi = document.createElement("li");
+          const checkBox = document.createElement("input");
+          checkBox.type = "checkbox";
+          checkBox.id = index;
+          checkBox.addEventListener("change", toggleTodo);
+          todoLi.appendChild(checkBox);
+          const todoText = document.createElement("span");
+          todoText.textContent = `${todo.todoText}`;
+          todoText.id = index;
+          todoLi.appendChild(todoText);
+          todoLi.id = index;
+          todoLi.appendChild(createDeleteButton());
+          todoUl.appendChild(todoLi);
+        });
+      }
+
+      function toggleTodo(event) {
+        const elementChanged = event.target;
+        if (elementChanged.type === "checkbox") {
+          todoList.toggleCompleted(parseInt(elementChanged.id));
+          const textElement = document.getElementById(elementChanged.id);
+          if (todoList.todos[elementChanged.id].completed) {
+            textElement.style.textDecoration = "line-through";
+          } else {
+            textElement.style.textDecoration = "none";
+          }
+        }
+      }
+
+      // 초기화
+      displayTodos();
+      async function onGeoOkay(position) {
+        let latitude = position.coords.latitude;
+        let longitude = position.coords.longitude;
+
+        let API_KEY = prompt("API KEY를 입력해주세요.(OpenWeather) -> 사용한 KEY는 날씨를 받아온 후 초기화합니다.");
+
+        try {
+          const response = await fetch(`https://api.openweathermap.org/data/2.5/weather?lang=kr&lat=${latitude}&lon=${longitude}&appid=${API_KEY}&units=metric`);
+          const data = await response.json();
+          console.log(data);
+          API_KEY = "";
+
+          const weatherSection = document.getElementById("weather");
+          const weatherLoc = document.createElement("h2");
+          weatherLoc.innerText = data.name;
+          weatherSection.appendChild(weatherLoc);
+          const weatherImg = document.createElement("img");
+          weatherImg.src = "http://openweathermap.org/img/wn/" + data.weather[0].icon + ".png";
+          weatherImg.alt = data.weather[0].description;
+          weatherSection.appendChild(weatherImg);
+          const weatherTemp = document.createElement("p");
+          weatherTemp.innerText = Math.round(data.main.temp) + " ℃";
+          weatherSection.appendChild(weatherTemp);
+        } catch (error) {
+          console.error("An error occurred:", error);
+        }
+      }
+
+      function onGeoError() {
+        alert("I can't find you. No weather for you.");
+      }
+
+      navigator.geolocation.getCurrentPosition(onGeoOkay, onGeoError);
     </script>
   </body>
 </html>
