Rename: 폴더변경 및 폴더명 변경

--- a/personal/안태경/js-class/2.랜덤이미지.html
+++ b/personal/안태경/js-class/2.랜덤이미지.html
@@ -24,7 +24,7 @@
     const randomPerson = people[Math.floor(Math.random() * people.length)];
 
     const etImg = document.createElement("img");
-    etImg.src = `../images/${randomPerson}`;
+    etImg.src = `./images/${randomPerson}`;
     etImg.width = 500;
 
     const homePage = document.querySelector(".home");
